--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Drunken Clam Brewery</title>
-    <meta name="description" content="Demo mini app" />
-    <meta name="keywords" content="React, Redux, bootstrap" />
+    <meta name="description" content="Demo mini-app" />
+    <meta name="keywords" content="React, Redux, Bootstrap" />
     <meta name="author" content="Aydin Ghane Kh." />
 
     <link
